2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add more WordPerfect globs, #10428. Thanks
	to Petr Mladek <pmladek@suse.cz>.
	Also replace "document" by "image" in EMF/WMF description.

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix WMF description and add matchlet, add
	EMF MIME type. Fixes #11385 and 11388. Thanks to Shaun Oldale
	<soldale@gmail.com>.
	Also fix OpenOffice Calc template description.

2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add MP2 audio, add more aliases for 3GPP, fixes
	#10457. Thanks to Matt Keenan <matt.keenan@sun.com>.

2007-06-26  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Add OpenOffice MIME matchlets, fixes #11276.
	Thanks to Matt Keenan <matt.keenan@sun.com>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Match "script" tag in HTML. Fixes #11259.
	Thanks to David Faure <faure@kde.org>.

2007-06-14  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Fix word order in powerpoint matchlet. Fixes
	#435. Thanks to David Faure <faure@kde.org>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* freedesktop.org.xml.in: Remove "application/x-netscape-bookmarks"
	definition, make "application/x-netscape-bookmarks" an alias for
	"application/x-mozilla-bookmarks". Also associate extensions "*.html"
	and "*.htm" with Mozilla bookmarks. Fixes #266.

=== shared-mime-info 0.21 ===

2007-04-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.21

2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Correct the magic for RTSPtext metalinks
	(See http://bugzilla.gnome.org/show_bug.cgi?id=429383)

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add X11 cursor type (#10043).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>
